fix row gap in brands section

--- a/src/features/layout/brands/brands.module.scss
+++ b/src/features/layout/brands/brands.module.scss
@@ -19,7 +19,7 @@
   .brandsGrid {
     display: grid;
     place-items: center;
-    grid-row-gap: 160px;
+    grid-row-gap: 230px;
     width: 100%;
     position: relative;
 
